WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216488
Web Inspector: docking buttons don't work when already docked if window is too small
https://bugs.webkit.org/show_bug.cgi?id=216488
Summary
Web Inspector: docking buttons don't work when already docked if window is to...
Devin Rousso
Reported
2020-09-14 12:07:23 PDT
# STEPS TO REPRODUCE 1. inspect any page 2. dock/attach Web Inspector 3. make the window small 4. press the other docking button # EXPECTED Docking/Attachment configuration changes # ACTUAL Nothing 😢
Attachments
Patch
(4.23 KB, patch)
2020-09-14 12:17 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2020-09-14 12:07:40 PDT
<
rdar://problem/68242717
>
Devin Rousso
Comment 2
2020-09-14 12:17:14 PDT
Created
attachment 408734
[details]
Patch
EWS
Comment 3
2020-09-14 12:54:25 PDT
Committed
r267031
: <
https://trac.webkit.org/changeset/267031
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408734
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug