Web Inspector: docking buttons don't work when already docked if window is too small https://bugs.webkit.org/show_bug.cgi?id=216488 <rdar://problem/68242717>

Reviewed by Timothy Hatcher.

Source/WebInspectorUI:

* UserInterface/Base/Main.js:
(WI.updateDockingAvailability):
(WI.updateDockedState):
(WI._updateDockNavigationItems):
Always be sure to update the docking navigation items when docking becomes unavailable
instead of just forcing Web Inspector to undock as if Web Inspector is already undocked
then none of the docking navigation items will be updated. This makes it so that the
docking navigation items are hidden when docking becomes unavailable while undocked.

Source/WebKit:

* UIProcess/Inspector/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::attach):
(WebKit::WebInspectorProxy::attachAvailabilityChanged):
If Web Inspector is already attached, it can re-attach with a different configuration.


Canonical link: https://commits.webkit.org/229321@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267031 268f45cc-cd09-0410-ab3c-d52691b4dbfc